--- a/styles.css
+++ b/styles.css
@@ -505,6 +505,12 @@ body {
   text-align: center;
 }
 
+.hero-image-servicios {
+  text-align:left;
+  width: 300px;
+  height: 300px;
+}
+
 .image-container {
   position: relative;
   display: inline-block;
@@ -1190,6 +1196,7 @@ body {
 }
 
 /* ===== FOOTER ===== */
+
 .footer {
   background: linear-gradient(135deg, var(--bg-dark), #1e293b);
   color: white;
@@ -1208,6 +1215,10 @@ body {
   font-weight: 600;
   margin-bottom: 1rem;
   color: #e2e8f0;
+}
+
+.footer-section a{
+  text-decoration: none;
 }
 
 .footer-logo {
